feat: Múltiplas execuções e escopo